Corrected vertical alignment of navbar icons.

--- a/app/assets/stylesheets/material_icons.css.less
+++ b/app/assets/stylesheets/material_icons.css.less
@@ -75,9 +75,9 @@ a.btn-fab .mdi::before{
   left: -8px;
 }
 
-.dodona-navbar .dropdown-toggle .mdi::before {
+.dodona-navbar .mdi::before {
   vertical-align: text-bottom;
-  line-height: 28px;
+  line-height: 30px;
 }
 
 .nav .mdi::before {
